c/examples/writing-a-c-compiler-tests/tests/chapter_14/invalid_types/extra_credit/compound_mod_pointer.c
/* A pointer can't appear as the left or right operand
 * of the *=, /=, or %= operator
 */
int main(void) {
    int i = 10;
    int *ptr = &i;
    i %= ptr;
    return 0;
}